--- a/nuage_topology_collector/user_vars.yml
+++ b/nuage_topology_collector/user_vars.yml
@@ -9,6 +9,6 @@
   remote_usr: heat-admin
   osc_env_file: /home/stack/overcloudrc
   undercloud_env_file : /home/stack/stackrc
-  lldp_poll_delay: 30
+  lldp_timeout: 30
   # ovs_manager_ip: 127.0.0.1
   # ovs_manager_port: 6640
