--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,10 @@
 # of appearance. Changing the order has an impact on the overall integration
 # process, which may cause wedges in the gate later.
 
+construct<2.9,>=2.8.10 # MIT
+keystoneauth1>=3.3.0 # Apache-2.0
+python-neutronclient>=6.3.0 # Apache-2.0
+python-novaclient>=9.1.0 # Apache-2.0
 ansible>=2.4.1.0
-nose>=1.3.7
-flake8>=3.5.0
 oslo_utils
+
