--- a/tox.ini
+++ b/tox.ini
@@ -29,7 +29,8 @@ commands = {posargs}
 
 [flake8]
 # "E123 closing bracket does not match indentation of opening bracket's line"
-ignore = E123
+# "W504 Line break occurred after a binary operator"
+ignore = E123,W504
 show-source = True
 exclude = .git,.venv,.tox,dist,doc,*egg,*.yml,*.pyc
 include=*.py
