--- a/requirements.txt
+++ b/requirements.txt
@@ -3,9 +3,10 @@
 # process, which may cause wedges in the gate later.
 
 construct<2.9,>=2.8.10 # MIT
+decorator<5.0
 keystoneauth1>=3.3.0 # Apache-2.0
 python-neutronclient>=6.3.0 # Apache-2.0
 python-novaclient>=9.1.0 # Apache-2.0
 ansible>=2.4.1.0
 oslo_utils
-
+ovsdbapp>=0.8.0 # Apache-2.0
