Remove ovsdbapp dependency in lldp module
Fix OSP16 workflow, allowing execution of the lldp
module on remote host with no ovsdbapp package present.

Change-Id: I7c9f23ccab475e3b14d752fef137fbcb9d7b1458
Closes-Bug: OPENSTACK-3010

--- a/nuage_topology_collector/roles/topology/tasks/main.yml
+++ b/nuage_topology_collector/roles/topology/tasks/main.yml
@@ -24,7 +24,7 @@
         - name: Compute iptables rule number
           become: yes
           shell: >
-            iptables -L -n --line-numbers | awk '/DROP/{print $1}'
+            iptables -L INPUT -n --line-numbers | awk '/DROP/{print $1}'
           register: rulenum
 
         - name: Allow incoming ovsdb connections
