Fix topology role for ovs computes
Change-Id: Ie1a957bb90ac5cbfb72c4f0b36dd6cad766db500
Closes-Bug: OPENSTACK-3011

--- a/nuage_topology_collector/roles/topology/tasks/main.yml
+++ b/nuage_topology_collector/roles/topology/tasks/main.yml
@@ -87,7 +87,7 @@
 
         - name: Set interfaces fact
           set_fact:
-            itfs_from_ovs: "{{ ovs_topology.keys() }}"
+            itfs_from_ovs: "{{ ovs_topology.keys() | list }}"
       when:
         - agents[inventory_hostname]['configurations']['bridge_mappings'] is defined
 
