TC improvements - phase II
Change-Id: I05c66f94f01d3b4b4027d581839a43a693e26e0c
Closes-Bug: PROD-11960

--- a/nuage_topology_collector/roles/tc-inventory/tasks/main.yaml
+++ b/nuage_topology_collector/roles/tc-inventory/tasks/main.yaml
@@ -24,14 +24,14 @@
 
 - name: set overcloud hosts fact
   set_fact:
-    overcloud_hosts: "{{ registered_overcloud_nodes.stdout }}"
+    overcloud_hosts: "{{ registered_overcloud_nodes.stdout | default({}) }}"
 
 - name: set overcloud agents fact
   set_fact:
-    overcloud_agents: "{{ registered_overcloud_agents.stdout }}"
+    overcloud_agents: "{{ registered_overcloud_agents.stdout | default({}) }}"
 
 - name: Add overcloud nodes with Neutron agents to ansible
-  with_dict: '{{ overcloud_hosts | default({}) }}'
+  with_dict: '{{ overcloud_hosts }}'
   add_host:
     name: '{{ item.key }}'
     groups: "tc_hosts"
