--- a/setup.cfg
+++ b/setup.cfg
@@ -19,3 +19,9 @@ classifier =
 [files]
 packages =
    nuage_topology_collector
+
+scripts =
+   nuage_topology_collector/scripts/generate_topology.py
+   nuage_topology_collector/scripts/populate_topology.py
+   nuage_topology_collector/scripts/topology_import.py
+   nuage_topology_collector/scripts/compare_topology.py
