--- a/requirements.txt
+++ b/requirements.txt
@@ -9,4 +9,5 @@ python-neutronclient>=6.3.0 # Apache-2.0
 python-novaclient>=9.1.0 # Apache-2.0
 ansible>=2.4.1.0
 oslo_utils
+ovs>=2.8.0,<2.15.0
 ovsdbapp>=0.8.0 # Apache-2.0
